# panduza-qt-app

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  container-entrypoint.sh  docker.build.sh  docker.run.sh  in.build.sh  ppaperwork.yml  resources.qrc
cmake/: dependencies.cmake
include/: Broker.hpp  CMakeLists.txt  Group.hpp  Machine.hpp  MainWindow.hpp  PanduzaEngine.hpp  PzaComboBox.hpp  PzaJSON.hpp  PzaMenu.hpp  PzaMenuBar.hpp  PzaTopic.hpp  PzaUtils.hpp
include/Interface/: Interface.hpp  InterfaceDataModel.hpp  InterfaceFamilies.hpp  Io.hpp  Platform.hpp
include/Noder/: NoderDataBase.hpp  NoderDataModel.hpp  NoderFrame.hpp  NoderScene.hpp  NoderStyle.hpp  NoderView.hpp  Pin.hpp
include/Utils/: PzaJSON.hpp
include/Widgets/: PzaComboBox.hpp  PzaMenu.hpp
rsc/files/: panduza.service
source/: Broker.cpp  CMakeLists.txt  CentralWidget.hpp  Group.cpp  Machine.cpp  MainStatusBar.hpp  MainWindow.cpp  MainWindow.hpp  PanduzaEngine.cpp  main.cpp
source/Admin/: AdminFrame.cpp  AdminFrame.hpp  CMakeLists.txt
source/Admin/CfgTreeEditor/: CMakeLists.txt  CfgTreeEditor.cpp  CfgTreeEditor.hpp
source/Admin/CfgTreeEditor/CfgTreeTree/: CMakeLists.txt  CfgTreeTreeItem.cpp  CfgTreeTreeItem.hpp  CfgTreeTreeModel.cpp  CfgTreeTreeModel.hpp
source/Admin/CfgTreeEditor/ItemEditor/: CMakeLists.txt  IeBroker.cpp  IeBroker.hpp  ItemEditor.cpp  ItemEditor.hpp  ItemEditorView.cpp  ItemEditorView.hpp
source/Admin/CfgTreeEditor/PlatformTree/: CMakeLists.txt  PlatformTreeItem.cpp  PlatformTreeItem.hpp  PlatformTreeMimeData.cpp  PlatformTreeMimeData.hpp  PlatformTreeModel.cpp  PlatformTreeModel.hpp
source/Admin/Data/: TabData.hpp
source/Admin/Platform/: CMakeLists.txt  TabPlatform.hpp
source/Admin/Platform/PzaTreeWidget/: CMakeLists.txt  PzaTreeTreeItem.cpp  PzaTreeTreeItem.hpp  PzaTreeTreeModel.cpp  PzaTreeTreeModel.hpp
source/Admin/System/: CMakeLists.txt  TabSystem.cpp  TabSystem.hpp
source/Interface/: Interface.cpp  Io.cpp  Platform.cpp
source/Noder/: CMakeLists.txt  Noder.cpp  Noder.hpp  NoderConsole.cpp  NoderConsole.hpp  NoderDataBase.cpp  NoderDataBase.hpp  NoderDataModel.cpp  NoderFrame.cpp  NoderFrame.hpp  NoderFunction.cpp  NoderFunction.hpp  NoderGraph.cpp  NoderGraph.hpp  NoderGraphArea.cpp  NoderGraphArea.hpp  NoderMainEvent.cpp  NoderMainEvent.hpp  NoderMenuBar.cpp  NoderMenuBar.hpp  NoderOutputArea.cpp  NoderOutputArea.hpp  NoderSP.cpp  NoderSP.hpp  NoderSPVariable.cpp  NoderSPVariable.hpp  NoderScenario.cpp  NoderScenario.hpp  NoderScene.cpp  NoderScene.hpp  NoderSidePanel.cpp  NoderSidePanel.hpp  NoderStyle.cpp  NoderVar.cpp  NoderVar.hpp  NoderVariable.cpp  NoderVariable.hpp  NoderView.cpp  NoderView.hpp
source/Noder/Node/: GNode.cpp  GNode.hpp  GNodeBasic.cpp  GNodeBasic.hpp  GNodeBranch.cpp  GNodeBranch.hpp  GNodeEvent.cpp  GNodeEvent.hpp  GNodeExec.cpp  GNodeExec.hpp  GNodeInstance.cpp  GNodeInstance.hpp  GNodeOp.cpp  GNodeOp.hpp  Link.cpp  Link.hpp  Node.cpp  Pin.cpp  Pin.hpp
source/Noder/Node/Nodes/: NFArray.cpp  NFArray.hpp  NFDelay.cpp  NFDelay.hpp  NFEvent.cpp  NFEvent.hpp  NFFor.cpp  NFFor.hpp  NFIO.cpp  NFIO.hpp  NFIf.cpp  NFIf.hpp  NFInstance.cpp  NFInstance.hpp  NFMath.cpp  NFMath.hpp  NFString.cpp  NFString.hpp  NInstance.cpp  NInstance.hpp
source/Noder/Node/Pin/: Pin.cpp  Pin.hpp  PinArray.cpp  PinArray.hpp  PinExec.cpp  PinExec.hpp  PinRef.cpp  PinRef.hpp
source/Noder/NodeComponent/: Link.cpp  NodeComponent.cpp  NodeEntry.cpp  NodeEntryBool.cpp  NodeEntryDouble.cpp  NodeEntryInteger.cpp  NodeEntryInterface.cpp  NodeEntryString.cpp  NodePropertyDropdown.cpp  NodePropertyPin.cpp
source/Noder/SidePanel/: NoderSPFunction.cpp  NoderSPFunction.hpp  NoderSPPin.cpp  NoderSPPin.hpp  NoderSPVarDrop.cpp  NoderSPVarDrop.hpp  NoderSPVarPicker.cpp  NoderSPVarPicker.hpp  NoderSPVariable.cpp  NoderSPVariable.hpp  NoderSidePanel.cpp  NoderSidePanel.hpp
source/Panduza/: CMakeLists.txt  Group.cpp  Group.hpp  Machine.cpp  Machine.hpp  PanduzaEngine.cpp  PanduzaEngine.hpp
source/Panduza/Interface/: Interface.cpp  Io.cpp  Platform.cpp
source/Store/: Broker.cpp  Broker.hpp  CMakeLists.txt  Group.hpp  Machine.cpp  Machine.hpp  Store.cpp  Store.hpp  Style.cpp  Style.hpp  WorkspaceInfo.hpp
source/Store/Interface/: Interface.hpp
source/Store/connection/: AdminConnection.cpp  AdminConnection.hpp  CMakeLists.txt  ConnectionInfo.cpp  ConnectionInfo.hpp  ConnectionLibrary.cpp  ConnectionLibrary.hpp  LocalWorker.cpp  LocalWorker.hpp  SshConnection.cpp  SshConnection.hpp  SystemWorker.hpp  connection.dox
source/Store/connection/admin/: ServerInstallModel.hpp
source/Store/platform/: CMakeLists.txt  Platform.hpp
source/Store/platform/tree/: BrokerDeclaration.hpp  CMakeLists.txt  InterfaceDeclaration.hpp  Tree.cpp  Tree.hpp
source/Store/workspace/: CMakeLists.txt  Workspace.cpp  Workspace.hpp
source/Store/workspace/etcpza/: CMakeLists.txt  EtcPza.hpp
source/Store/workspace/etcpza/cfgtree/: CMakeLists.txt  CfgBroker.cpp  CfgBroker.hpp  CfgInterface.hpp  CfgTree.cpp  CfgTree.hpp
source/Store/workspace/etcpza/platform/: CMakeLists.txt  Platform.cpp  Platform.hpp
source/StoreBar/: CMakeLists.txt  StoreBar.hpp  TabInterfaces.cpp  TabInterfaces.hpp  TabServer.cpp  TabServer.hpp  TabWorkspace.cpp  TabWorkspace.hpp  storebar.dox
source/Utils/: PzaJSON.hpp  PzaLimits.hpp  PzaStyle.hpp  PzaTopic.hpp  PzaUtils.hpp  QYaml.hpp
source/Widgets/: PzaAdminButton.cpp  PzaAdminButton.hpp  PzaCheckBox.cpp  PzaCheckBox.hpp  PzaColorBox.cpp  PzaColorBox.hpp  PzaComboBox.cpp  PzaComboBox.hpp  PzaDoubleSpinBox.cpp  PzaDoubleSpinBox.hpp  PzaForm.cpp  PzaForm.hpp  PzaLabel.cpp  PzaLabel.hpp  PzaLineEdit.cpp  PzaLineEdit.hpp  PzaMenu.cpp  PzaMenu.hpp  PzaMenuBar.cpp  PzaMenuBar.hpp  PzaMimeData.hpp  PzaMoreLess.cpp  PzaMoreLess.hpp  PzaNameEntry.cpp  PzaNameEntry.hpp  PzaPopup.cpp  PzaPopup.hpp  PzaProperty.cpp  PzaProperty.hpp  PzaPropertyTable.cpp  PzaPropertyTable.hpp  PzaPushButton.cpp  PzaPushButton.hpp  PzaScrollArea.cpp  PzaScrollArea.hpp  PzaSpinBox.cpp  PzaSpinBox.hpp  PzaSplitter.cpp  PzaSplitter.hpp  PzaSpoiler.cpp  (+19 more)
styles/: DefaultTheme.json
(+35 files in other folders)
